--- a/server/app/viewStyles/style1.scala.html
+++ b/server/app/viewStyles/style1.scala.html
@@ -1,11 +1,22 @@
 @import util.Article
 @(articles:List[Article])
+@if(articles.length == 1) {
+<section class="wrapper style1 container special">
+	<div class="row">
+		<div class="4u 12u(narrower)">
+			<section>
+				<header>
+				</header>
+				<p></p>
+			</section>
+		</div>
+	</div>
+</section>
 <section class="wrapper style1 container special">
 	<div class="row">
 		@for(article <- articles) {
 		<div class="4u 12u(narrower)">
 			<section>
-				<span class="icon featured fa-check"></span>
 				<header>
 					<h2>@article.title</h2>
 					@if(article.subtitle.isDefined) {
@@ -18,3 +29,34 @@
 		}
 	</div>
 </section>
+<section class="wrapper style1 container special">
+	<div class="row">
+		<div class="4u 12u(narrower)">
+			<section>
+				<header>
+				</header>
+				<p></p>
+			</section>
+		</div>
+	</div>
+</section>
+}
+@if(articles.length != 1) {
+<section class="wrapper style1 container special">
+	<div class="row">
+		@for(article <- articles) {
+		<div class="4u 12u(narrower)">
+			<section>
+				<header>
+					<h2>@article.title</h2>
+					@if(article.subtitle.isDefined) {
+					<h3>@article.subtitle.get</h3>
+					}
+				</header>
+				<p>@article.body</p>
+			</section>
+		</div>
+		}
+	</div>
+</section>
+}
