--- a/server/app/viewStyles/style1.scala.html
+++ b/server/app/viewStyles/style1.scala.html
@@ -1,5 +1,5 @@
 @import util.Article
-@(articles:List[Article])
+@(articles:List[Article],icon:Option[Html] = None)
 @if(articles.length == 1) {
 <section class="wrapper style1 container special">
 	<div class="row">
@@ -17,6 +17,10 @@
 		@for(article <- articles) {
 		<div class="4u 12u(narrower)">
 			<section>
+			@if(article.image.isDefined) {
+			<img src="@routes.Assets.versioned("images/" + article.image.get)" alt=""/>
+			}
+				
 				<header>
 					<h2>@article.title</h2>
 					@if(article.subtitle.isDefined) {
