--- a/server/app/viewStyles/style3.scala.html
+++ b/server/app/viewStyles/style3.scala.html
@@ -1,5 +1,5 @@
 @import util.Article
-@(articles:List[Article],primaryTitle:Option[String]=None)
+@(articles:List[Article],primaryTitle:Option[String]=None,icon:Option[Html] = None)
 <section class="wrapper style3 container special">
 	@if(primaryTitle.isDefined) {
 	<header class="major">
@@ -10,7 +10,9 @@
 	@for(article <- articles) {
 		<div class="6u 12u(narrower)">
 			<section>
-				<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+			@if(icon.isDefined) {
+			<a class="image featured"><img src="@icon" alt=""/></a>
+			}
 				<header>
 					<h3>@article.title</h3>
 					@if(article.subtitle.isDefined) {
@@ -22,9 +24,4 @@
 		</div>
 	}
 	</div>
-	<footer class="major">
-		<ul class="buttons">
-			<li><a href="#" class="button">See More</a></li>
-		</ul>
-	</footer>
 </section>
